  (Hannes)
- Fixed bug #44617 (wrong HTML entity output when substitute_character=entity).
  (Moriyoshi)
- Fixed bug #44246 (closedir() accepts a file resource opened by fopen()).
  (Dmitry, Tony)
- Fixed bug #44127 (UNIX abstract namespace socket connect does not work).
  (Jani)
- Fixed bug #43993 (mb_substr_count() behaves differently to substr_count() with
  overlapping needles). (Moriyoshi)
- Fixed bug #43941 (json_encode silently cuts non-UTF8 strings). (Stas)
- Fixed bug #43782 (feof() does not detect timeout on socket). (David Soria Parra)
- Fixed bug #43668 (Added odbc.default_cursortype to control the ODBC
  cursormodel). (Patrick)
- Fixed bug #43666 (Fixed code to use ODBC 3.52 datatypes for 64bit systems). 
  (Patrick)
- Fixed bug #42737 (preg_split('//u') triggers a E_NOTICE with newlines).
  (Nuno)
- Fixed bug #42604 ("make test" fails with --with-config-file-scan-dir=path).
  (Jani)
- Fixed bug #42318 (problem with nm on AIX, not finding object files). (Dmitry)
- Fixed bug #41348 (OCI8: allow compilation with Oracle 8.1). (Chris Jones)

01 May 2008, PHP 5.2.6
- Fixed two possible crashes inside posix extension (Tony)
- Fixed incorrect heredoc handling when label is used within the block. 
  (Matt)
- Fixed possible stack buffer overflow in FastCGI SAPI. (Andrei Nigmatulin)
- Fixed sending of uninitialized paddings which may contain some information. (Andrei Nigmatulin)
- Fixed a bug in formatting timestamps when DST is active in the default timezone (Derick)
- Properly address incomplete multibyte chars inside escapeshellcmd() (Ilia, Stefan Esser)
- Fix integer overflow in printf(). (Stas, Maksymilian Aciemowicz)
- Fixed security issue detailed in CVE-2008-0599. (Rasmus)
- Fixed potential memleak in stream filter parameter for zlib filter. (Greg)
- Added Reflection API metadata for the methods of the DOM classes. (Sebastian)
- Fixed weird behavior in CGI parameter parsing. (Dmitry, Hannes Magnusson)